Fix spacing to make the right a sub

--- a/apps/frontend/src/routes/Home.module.scss
+++ b/apps/frontend/src/routes/Home.module.scss
@@ -18,7 +18,7 @@
 
 .right {
 	display: flex;
-	width: auto;
+	width: 50%;
 	height: 100%;
 	float: right;
 	justify-content: center;
